# distributed-clock-simulator

./: Cargo.toml  README.md
src/: app.rs  client.rs  lamport_clock.rs  main.rs  server.rs  ui.rs
src/snapshots/: distributed_clock_simulator__app__test__render_app.snap
