[package]
name = "distributed-clock-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
log = "0.4.29"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
